@@ -1,10 +1,13 @@
 package com.example.Quora.configurations;
+
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.core.Ordered;
+import org.springframework.core.annotation.Order;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -20,7 +23,8 @@ public class GlobalCorsConfig {
     private String prodOrigins;
 
     @Bean
-    public CorsFilter corsFilter() {
+    @Order(Ordered.HIGHEST_PRECEDENCE)
+    public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
         List<String> allowedOrigins = new ArrayList<>();
@@ -28,20 +32,22 @@ public class GlobalCorsConfig {
         allowedOrigins.addAll(Arrays.asList(prodOrigins.split(",")));
 
         config.setAllowedOrigins(allowedOrigins);
-        config.setAllowedMethods(List.of(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS"
+        config.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
-        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(Arrays.asList(
+                "Authorization", 
+                "Content-Type"
+        ));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
-        // 🔍 debug once
-        System.out.println("CORS ALLOWED ORIGINS => " + allowedOrigins);
+        System.out.println("🔍 CORS ALLOWED ORIGINS => " + allowedOrigins);
 
-        return new CorsFilter(source);
+        return source;
     }
 }
-
